--- a/addons/meross_local_broker/addon_web_ui/src/app/home/home.component.html
+++ b/addons/meross_local_broker/addon_web_ui/src/app/home/home.component.html
@@ -9,7 +9,10 @@
       <!-- Device Name Column -->
       <ng-container matColumnDef="deviceId">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Device Name</th>
-        <td mat-cell *matCellDef="let element">{{ element.deviceName }} <br/> ({{ element.uuid }})</td>
+        <td mat-cell *matCellDef="let element">
+          {{ element.deviceName }} <br />
+          ({{ element.uuid }})
+        </td>
       </ng-container>
 
       <ng-container matColumnDef="network">
@@ -19,7 +22,7 @@
 
       <ng-container matColumnDef="status">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Status</th>
-        <td mat-cell *matCellDef="let element">{{ element.status }}</td>
+        <td mat-cell *matCellDef="let element">{{ element.online_status }}</td>
       </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
