--- a/addons/meross_local_broker/addon_web_ui/src/app/home/home.component.html
+++ b/addons/meross_local_broker/addon_web_ui/src/app/home/home.component.html
@@ -3,15 +3,34 @@
     <mat-toolbar color="primary">
       <span>Paired devices</span>
       <span class="spacer"></span>
-      <mat-slide-toggle class="small" (change)="onAutodeviceUpdate($event)">Auto update</mat-slide-toggle>
+      <mat-slide-toggle class="small" [checked]="autoUpdate" (change)="onAutodeviceUpdate($event)"
+        >Auto update</mat-slide-toggle
+      >
     </mat-toolbar>
     <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" matSort>
       <!-- Device Name Column -->
       <ng-container matColumnDef="deviceId">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Device Name</th>
         <td mat-cell *matCellDef="let element">
-          {{ element.deviceName }} <br />
-          ({{ element.uuid }})
+          <div style="flex-direction: row; display: flex">
+            <div>
+              <button mat-icon-button [matMenuTriggerFor]="deviceMenu" aria-label="Device menu">
+                <mat-icon>more_vert</mat-icon>
+              </button>
+              <mat-menu #deviceMenu="matMenu">
+                <button mat-menu-item (click)="assignName(element)">
+                  <mat-icon>edit</mat-icon>
+                  <span>Assign name</span>
+                </button>
+              </mat-menu>
+            </div>
+            <div>
+              <span *ngIf="!element.deviceName" class="grayout">&lt;No name set&gt;</span>
+              <span *ngIf="element.deviceName">{{ element.deviceName }}</span>
+              <br />
+              <span class="mat-small">{{ element.uuid }}</span>
+            </div>
+          </div>
         </td>
       </ng-container>
 
@@ -22,7 +41,9 @@
 
       <ng-container matColumnDef="status">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Status</th>
-        <td mat-cell *matCellDef="let element">{{ element.online_status }}</td>
+        <td mat-cell *matCellDef="let element" [matTooltip]="'Last message on ' + element.last_seen_time">
+          {{ element.online_status | onlineDeviceStatusName }}
+        </td>
       </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
