--- a/addons/meross_local_broker/addon_web_ui/src/app/home/home.component.html
+++ b/addons/meross_local_broker/addon_web_ui/src/app/home/home.component.html
@@ -25,8 +25,8 @@
               </mat-menu>
             </div>
             <div>
-              <span *ngIf="!element.deviceName" class="grayout">&lt;No name set&gt;</span>
-              <span *ngIf="element.deviceName">{{ element.deviceName }}</span>
+              <a *ngIf="element.dev_name === null" (click)="assignName(element)" class="grayout">(No name set)</a>
+              <span *ngIf="element.dev_name !== null">{{ element.dev_name }}</span>
               <br />
               <span class="mat-small">{{ element.uuid }}</span>
             </div>
@@ -37,6 +37,13 @@
       <ng-container matColumnDef="network">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Network Info</th>
         <td mat-cell *matCellDef="let element">{{ element.mac }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="userId">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>User Id</th>
+        <td mat-cell *matCellDef="let element">
+          {{ element.user_id }}
+        </td>
       </ng-container>
 
       <ng-container matColumnDef="status">
