--- a/addons/meross_local_broker/addon_web_ui/src/app/home/home.component.html
+++ b/addons/meross_local_broker/addon_web_ui/src/app/home/home.component.html
@@ -1,14 +1,11 @@
-<div class="container">
+<div class="container" fxLayout="row wrap" fxLayoutGap="12px">
   <!-- Device List -->
   <div class="max-800">
     <mat-toolbar color="primary">
       <span>Paired devices</span>
       <span class="spacer"></span>
-      <mat-slide-toggle class="small" [checked]="autoUpdate" (change)="onAutodeviceUpdate($event)"
-        >Auto update</mat-slide-toggle
-      >
     </mat-toolbar>
-    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" matSort>
+    <table mat-table [dataSource]="deviceSource" class="mat-elevation-z8" matSort>
       <!-- Device Name Column -->
       <ng-container matColumnDef="deviceId">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Device Name</th>
@@ -62,8 +59,8 @@
         </td>
       </ng-container>
 
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+      <tr mat-header-row *matHeaderRowDef="devicesColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: devicesColumns"></tr>
 
       <!-- Row shown when there is no matching data. -->
       <tr class="mat-row" *matNoDataRow>
@@ -80,62 +77,33 @@
       <span>Paired subdevices</span>
       <span class="spacer"></span>
     </mat-toolbar>
-    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" matSort>
-      <!-- Device Name Column -->
-      <ng-container matColumnDef="deviceId">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Device Name</th>
+    <table mat-table [dataSource]="subdeviceSource" class="mat-elevation-z8" matSort>
+      <!-- Subdevice Name Column -->
+      <ng-container matColumnDef="subdeviceId">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Subdevice Name/Id</th>
         <td mat-cell *matCellDef="let element">
-          <div style="flex-direction: row; display: flex">
-            <div>
-              <button mat-icon-button [matMenuTriggerFor]="deviceMenu" aria-label="Device menu">
-                <mat-icon>more_vert</mat-icon>
-              </button>
-              <mat-menu #deviceMenu="matMenu">
-                <button mat-menu-item (click)="assignName(element)">
-                  <mat-icon>edit</mat-icon>
-                  <span>Assign name</span>
-                </button>
-              </mat-menu>
-            </div>
-            <div>
-              <a *ngIf="element.dev_name === null" (click)="assignName(element)" class="grayout">(No name set)</a>
-              <span *ngIf="element.dev_name !== null">{{ element.dev_name }}</span>
-              <br />
-              <span class="mat-small">{{ element.uuid }}</span>
-            </div>
-          </div>
+          <span>{{ element.sub_device_name }}</span>
+          <br />
+          <span class="mat-small">{{ element.sub_device_id }}</span>
         </td>
       </ng-container>
 
+      <!-- Subdevice Type Column -->
       <ng-container matColumnDef="type">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Device Type</th>
-        <td mat-cell *matCellDef="let element">{{ element.device_type }}</td>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Subdevice Type</th>
+        <td mat-cell *matCellDef="let element">{{ element.sub_device_type }}</td>
       </ng-container>
 
-      <ng-container matColumnDef="network">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Network Info</th>
+      <!-- Subdevice HubId Column -->
+      <ng-container matColumnDef="hubId">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Hub UUID</th>
         <td mat-cell *matCellDef="let element">
-          <span class="mat-small">{{ element.mac }}</span>
-          <span class="mat-small" *ngIf="element.local_ip"><br />({{ element.local_ip }})</span>
+          <span class="mat-small">{{ element.hub_uuid }}</span>
         </td>
       </ng-container>
 
-      <ng-container matColumnDef="userId">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>User Id</th>
-        <td mat-cell *matCellDef="let element">
-          {{ element.user_id }}
-        </td>
-      </ng-container>
-
-      <ng-container matColumnDef="status">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Status</th>
-        <td mat-cell *matCellDef="let element" [matTooltip]="'Last message on ' + element.last_seen_time">
-          {{ element.online_status | onlineDeviceStatusName }}
-        </td>
-      </ng-container>
-
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+      <tr mat-header-row *matHeaderRowDef="subdevicesColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: subdevicesColumns"></tr>
 
       <!-- Row shown when there is no matching data. -->
       <tr class="mat-row" *matNoDataRow>
