--- a/addons/meross_local_broker/addon_web_ui/src/app/home/home.component.html
+++ b/addons/meross_local_broker/addon_web_ui/src/app/home/home.component.html
@@ -1,4 +1,9 @@
 <div class="container" fxLayout="row wrap" fxLayoutGap="12px">
+  Please remove all the Meross Devices from your Meross Account (via the APP) and then
+  pair them via the Custom Pairer App. Notice: your smartphone must be connected to the
+  same Local Network where this Addon is executing.
+</div>
+<div class="container" fxLayout="row wrap" fxLayoutGap="12px">
   <!-- Device List -->
   <div class="max-800">
     <mat-toolbar color="primary">
@@ -8,8 +13,8 @@
     <table mat-table [dataSource]="deviceSource" class="mat-elevation-z8" matSort>
       <!-- Device Name Column -->
       <ng-container matColumnDef="deviceId">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Device Name</th>
-        <td mat-cell *matCellDef="let element">
+        <th class="p5" mat-header-cell *matHeaderCellDef mat-sort-header>Device Name</th>
+        <td class="p5" mat-cell *matCellDef="let element">
           <div style="flex-direction: row; display: flex">
             <div>
               <button mat-icon-button [matMenuTriggerFor]="deviceMenu" aria-label="Device menu">
@@ -33,28 +38,28 @@
       </ng-container>
 
       <ng-container matColumnDef="type">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Device Type</th>
-        <td mat-cell *matCellDef="let element">{{ element.device_type }}</td>
+        <th class="p5" mat-header-cell *matHeaderCellDef mat-sort-header>Device Type</th>
+        <td class="p5" mat-cell *matCellDef="let element">{{ element.device_type }}</td>
       </ng-container>
 
       <ng-container matColumnDef="network">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Network Info</th>
-        <td mat-cell *matCellDef="let element">
+        <th class="p5" mat-header-cell *matHeaderCellDef mat-sort-header>Network Info</th>
+        <td class="p5" mat-cell *matCellDef="let element">
           <span class="mat-small">{{ element.mac }}</span>
           <span class="mat-small" *ngIf="element.local_ip"><br />({{ element.local_ip }})</span>
         </td>
       </ng-container>
 
       <ng-container matColumnDef="userId">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>User Id</th>
-        <td mat-cell *matCellDef="let element">
+        <th class="p5" mat-header-cell *matHeaderCellDef mat-sort-header>User Id</th>
+        <td class="p5" mat-cell *matCellDef="let element">
           {{ element.user_id }}
         </td>
       </ng-container>
 
       <ng-container matColumnDef="status">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Status</th>
-        <td mat-cell *matCellDef="let element" [matTooltip]="'Last message on ' + element.last_seen_time">
+        <th class="p5" mat-header-cell *matHeaderCellDef mat-sort-header>Status</th>
+        <td class="p5" mat-cell *matCellDef="let element" [matTooltip]="'Last message on ' + element.last_seen_time">
           {{ element.online_status | onlineDeviceStatusName }}
         </td>
       </ng-container>
@@ -82,7 +87,8 @@
       <ng-container matColumnDef="subdeviceId">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Subdevice Name/Id</th>
         <td mat-cell *matCellDef="let element">
-          <span>{{ element.sub_device_name }}</span>
+          <span *ngIf="element.sub_device_name">{{ element.sub_device_name }}</span>
+          <span *ngIf="!element.sub_device_name">Unknown</span>
           <br />
           <span class="mat-small">{{ element.sub_device_id }}</span>
         </td>
